feat: basic enemy attacks setup

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,3 +73,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/ProjectElementP1.MyClass",NewName="/Script/ProjectElementP1.CallEvent")
++ClassRedirects=(OldName="/Script/ProjectElementP1.CallDelegate",NewName="/Script/ProjectElementP1.BTT_CallDelegate")
++EnumRedirects=(OldName="/Script/ProjectElementP1.EAbilityUse",NewName="/Script/ProjectElementP1.EAbilityType")
