fix: rename abilityType to abilitySlot

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,5 +80,8 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/ProjectElementP1.MyClass",NewName="/Script/ProjectElementP1.CallEvent")
 +ClassRedirects=(OldName="/Script/ProjectElementP1.CallDelegate",NewName="/Script/ProjectElementP1.BTT_CallDelegate")
-+EnumRedirects=(OldName="/Script/ProjectElementP1.EAbilityUse",NewName="/Script/ProjectElementP1.EAbilityType")
++EnumRedirects=(OldName="/Script/ProjectElementP1.EAbilityUse",NewName="/Script/ProjectElementP1.EAbilitySlot")
++ClassRedirects=(OldName="/Script/ProjectElementP1.InventoryComponent",NewName="/Script/ProjectElementP1.EquipmentComponent")
++PropertyRedirects=(OldName="/Script/ProjectElementP1.EquipmentComponent.Abilities",NewName="/Script/ProjectElementP1.EquipmentComponent.AbilityTypes")
++EnumRedirects=(OldName="/Script/ProjectElementP1.EAbilityType",NewName="/Script/ProjectElementP1.EAbilitySlot")
 
