update: base shiflix character

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -84,4 +84,5 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectElementP1.InventoryComponent",NewName="/Script/ProjectElementP1.EquipmentComponent")
 +PropertyRedirects=(OldName="/Script/ProjectElementP1.EquipmentComponent.Abilities",NewName="/Script/ProjectElementP1.EquipmentComponent.AbilityTypes")
 +EnumRedirects=(OldName="/Script/ProjectElementP1.EAbilityType",NewName="/Script/ProjectElementP1.EAbilitySlot")
++ClassRedirects=(OldName="/Script/ProjectElementP1.BaseEnemy",NewName="/Script/ProjectElementP1.ShiflixCharacter")
 
