fix: equipment initialization

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -85,4 +85,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectElementP1.EquipmentComponent.Abilities",NewName="/Script/ProjectElementP1.EquipmentComponent.AbilityTypes")
 +EnumRedirects=(OldName="/Script/ProjectElementP1.EAbilityType",NewName="/Script/ProjectElementP1.EAbilitySlot")
 +ClassRedirects=(OldName="/Script/ProjectElementP1.BaseEnemy",NewName="/Script/ProjectElementP1.ShiflixCharacter")
++PropertyRedirects=(OldName="/Script/ProjectElementP1.ShiflixCharacter.EquipmentComp",NewName="/Script/ProjectElementP1.ShiflixCharacter.Equipment")
 
