Changed gravity and implemented wave system

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,3 +87,6 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectElementP1.BaseEnemy",NewName="/Script/ProjectElementP1.ShiflixCharacter")
 +PropertyRedirects=(OldName="/Script/ProjectElementP1.ShiflixCharacter.EquipmentComp",NewName="/Script/ProjectElementP1.ShiflixCharacter.Equipment")
 
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-1200.000000
+
