feat: ability cooldown

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -86,6 +86,7 @@ ManualIPAddress=
 +EnumRedirects=(OldName="/Script/ProjectElementP1.EAbilityType",NewName="/Script/ProjectElementP1.EAbilitySlot")
 +ClassRedirects=(OldName="/Script/ProjectElementP1.BaseEnemy",NewName="/Script/ProjectElementP1.ShiflixCharacter")
 +PropertyRedirects=(OldName="/Script/ProjectElementP1.ShiflixCharacter.EquipmentComp",NewName="/Script/ProjectElementP1.ShiflixCharacter.Equipment")
++PropertyRedirects=(OldName="/Script/ProjectElementP1.AbilityComponent.CooldownOnReset",NewName="/Script/ProjectElementP1.AbilityComponent.CooldownOnStop")
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-1200.000000
